added package.json, webpack config, moved vuejs components to separate files, ...

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Accessibility Info Tree</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="app/css/custom.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="tags.js"></script>
@@ -13,129 +13,13 @@
 <body>
 
 <div id="app">
-    <div v-if="selectedTag" class="container">
-        <div class="row">
-            <label class="col-md-2" for="currentParents">Eltern</label>
-            <span class="col-md-10" id="currentParents">
-                <a v-for="tag in selectedTag.parents" href="javascript:;" @click="selectTag(tag)">{{tag}}</a>
-                <span v-if="selectedTag.parents.length === 0">(keine)</span>
-            </span>
-        </div>
-        <div class="row">
-            <label class="col-md-2" for="currenTag">aktuelle Auswahl</label>
-            <span class="col-md-10" id="currenTag">{{selectedTag.id}}</span>
-        </div>
-        <div class="row">
-            <label class="col-md-2" for="currentChildren">Kinder</label>
-            <span class="col-md-10" id="currentChildren">
-                <a v-for="tag in selectedTag.children" href="javascript:;" @click="selectTag(tag)">{{tag}} </a>
-            </span>
-        </div>
-    </div>
-
-
-    <div id="tree" style="margin-top: 2em">
-        <div>
-            <a href="javascript:;" @click="selectTag('EVERYTHING')">Zeige ganzen Baum</a>
-        </div>
-        <div>
-            <span>Unterbaum nach: </span>
-            <span v-if="selectedTag.parents.length > 1">(</span>
-            <span v-for="(parent, index) in selectedTag.parents">
-                <span v-if="index > 0">, </span>
-                <a href="javascript:;" @click="selectTag(parent)">{{parent}}</a>
-            </span>
-            <span v-if="selectedTag.parents.length > 1">)</span>
-            <span v-if="selectedTag.parents.length > 0"> -> </span>
-            <span>{{selectedTag.id}}</span>
-        </div>
-        <tree-item v-if="selectedTag" :item="selectedTag" :select-tag-fn="selectTag"/>
-    </div>
-
-
-    <input type="text" v-model="search" @input="searchTags"/>
-    <div>
-        <span v-for="tag in filteredTags"><a href="javascript:;" @click="selectTag(tag.id)">{{tag.id}}</a>&nbsp;</span>
-    </div>
+    <h1>Accessibility Info Tree</h1>
+    <p>
+        <router-link to="/tree">Go to Tree</router-link>
+    </p>
+    <router-view></router-view>
 </div>
 
+<script src="app/build/a11y-info-tree.bundle.js"></script>
 </body>
 </html>
-<script>
-    Vue.component('tree-item', {
-        props: {
-            'item': Object,
-            'depth': Number,
-            'selectTagFn': Function
-        },
-        data: function () {
-            return {
-                currentDepth: this.depth ? this.depth + 1: 1,
-                hasChildren: this.item.children.length > 0
-            }
-        },
-        methods: {
-            getTag(id) {
-                return window.TAGS.filter(tag => tag.id === id)[0];
-            },
-            getStyle() {
-                let count =  this.item && this.item.children ? this.item.children.length : 1;
-                return `width: ${(100.0 / count)}%;`;
-            },
-            getTextStyle(tagId) {
-                return this.getTag(tagId).children.length > 0 ? 'width: 30%;' : 'width: 100%;';
-            }
-        },
-        mounted() {
-        },
-        template: `
-<div v-if="item" style=";">
-        <div v-for="childId in item.children" style="display: flex; align-items: center; border: 1px solid gray;">
-            <div class="treeText" :style="getTextStyle(childId)">
-                <a v-if="getTag(childId).children.length > 0" href="javascript:;" @click="selectTagFn(childId)">{{childId}}</a>
-                <span v-else>{{childId}}</span>
-            </div>
-            <tree-item v-if="getTag(childId).children.length > 0" style="flex: 1 1 auto;" :item="getTag(childId)" :depth="currentDepth" :select-tag-fn="selectTagFn"></tree-item>
-        </div>
-</div>`
-    });
-
-    let thiz = new Vue({
-        el: '#app',
-        data: {
-            input: '# hello',
-            tags: window.TAGS,
-            filteredTags: window.TAGS,
-            selectedTag: window.TAGS[2],
-            selectedTagChildren: null,
-            search: '',
-            timeoutHandler: null
-        },
-        methods: {
-            searchTags() {
-                if (thiz.timeoutHandler) clearTimeout(thiz.timeoutHandler);
-                thiz.timeoutHandler = setTimeout(() => {
-                    thiz.filteredTags = thiz.tags.filter(tag => tag.id.toLowerCase().includes(thiz.search.toLowerCase()));
-                }, 200);
-
-            },
-            selectTag(id) {
-                thiz.selectedTag = thiz.tags.filter(tag => tag.id === id)[0];
-
-
-                function getChildren(item) {
-                    if (!item) return;
-
-                }
-            },
-            getTag(tagId) {
-                return thiz.tags.filter(tag => tag.id === tagId)[0];
-            }
-        },
-        mounted() {
-            console.log(this.selectedTag);
-        }
-    });
-
-
-</script>
