harmonized tag-ids, removed tests

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accessibility Info Tree</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
@@ -14,9 +15,9 @@
 
 <div id="app">
     <h1>Accessibility Info Tree</h1>
-    <p>
+    <!--p>
         <router-link to="/tree">Go to Tree</router-link>
-    </p>
+    </p-->
     <router-view></router-view>
 </div>
 
