using protected couchdb endpoint for saving data, added libs: pouchDb, ObjectModel, loglevel

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 <div id="app">
     <h1>Accessibility Info Tree</h1>
-    <!--p>
-        <router-link to="/tree">Go to Tree</router-link>
-    </p-->
+    <p>
+        <router-link to="/tree">Tree</router-link>
+        <router-link to="/login">Login</router-link>
+    </p>
     <router-view></router-view>
 </div>
 
