--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h1>Accessibility Info Tree</h1>
     <p>
         <router-link to="/tree">Tree</router-link>
+        <router-link to="/tree/edit">Edit Tree</router-link>
         <router-link to="/login">Login</router-link>
     </p>
     <router-view></router-view>
