--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <div id="app">
     <h1>Accessibility Info Tree</h1>
-    <p>
-        <router-link to="/tree">Tree</router-link>
-        <router-link to="/tree/edit">Edit Tree</router-link>
-        <router-link to="/login">Login</router-link>
-    </p>
+    <header>
+        <router-link class="button" to="/tree">Tree</router-link>
+        <router-link class="button" to="/tree/edit">Edit Tree</router-link>
+        <router-link class="button" to="/login">Login</router-link>
+    </header>
     <router-view></router-view>
 </div>
 
