moved router view to main element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <router-link class="button" to="/tree/edit">Edit Tree</router-link>
         <router-link class="button" to="/login">Login</router-link>
     </header>
-    <router-view></router-view>
+    <main>
+        <router-view></router-view>
+    </main>
 </div>
 
 <script src="app/build/a11y-info-tree.bundle.js"></script>
