--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accessibility Info Tree</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
     <link rel="stylesheet" href="app/css/custom.css">
-
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="tags.js"></script>
 </head>
 <body>
@@ -16,8 +13,8 @@
 <div id="app">
     <h1>Accessibility Info Tree</h1>
     <header>
-        <router-link class="button" to="/tree">Tree</router-link>
-        <router-link class="button" to="/tree/edit">Edit Tree</router-link>
+        <router-link class="button" to="/tree">Tag-Baum</router-link>
+        <router-link class="button" to="/tree/edit">Tag-Baum bearbeiten</router-link>
         <router-link class="button" to="/login">Login</router-link>
     </header>
     <main>
