--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Accessibility Info Tree</h1>
     <header>
         <router-link class="button" to="/tree">Tag-Baum</router-link>
-        <router-link class="button" to="/tree/edit">Tag-Baum bearbeiten</router-link>
+        <router-link class="button" to="/tree/edit">Tags bearbeiten</router-link>
         <router-link class="button" to="/login">Login</router-link>
     </header>
     <main>
