added entries views

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div id="app">
     <h1>Accessibility Info Tree</h1>
     <header>
+        <router-link class="button" to="/entries">Einträge</router-link>
         <router-link class="button" to="/tree">Tag-Baum</router-link>
         <router-link class="button" to="/tree/edit">Tags bearbeiten</router-link>
         <router-link class="button" to="/login">Login</router-link>
