manually using fontawesome instead of npm version -> performance problems for js version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Accessibility Info Tree</title>
 
     <link rel="stylesheet" href="app/css/custom.css">
+    <link rel="stylesheet" href="app/lib/fontawesome-free-5.12.0-web/css/all.min.css">
     <script src="tags.js"></script>
 </head>
 <body>
