--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="app/css/custom.css">
     <link rel="stylesheet" href="app/lib/fontawesome-free-5.12.0-web/css/all.min.css">
-    <script src="tags.js"></script>
+    <script src="app/lib/difflib.js"></script>
 </head>
 <body>
 
