--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="app/icons/favicon.ico">
+
     <title>Accessibility Info Tree</title>
 
     <link rel="stylesheet" href="app/css/custom.css">
