--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="app" class="content">
     <header class="own-container">
         <h1 style="display: inline-block; margin-bottom: 0">
-            <a href="https://wbt.wien/" title="Projektseite Wissensdrehscheibe" target="_blank"><img aria-hidden="true" src="app/img/prepart.png"/></a><a href="." title="Wissensbasis Home"><img aria-hidden="true" src="app/img/wissensbasis.png"/></a>
+            <a href="https://wbt.wien/" title="Projektseite Wissensdrehscheibe" target="_blank"><img aria-hidden="true" src="app/img/prepart.svg"/></a><a href="." title="Wissensbasis Home"><img aria-hidden="true" src="app/img/wissensbasis.svg"/></a>
         </h1>
         <div class="header-links">
             <router-link class="button first-link" to="/entries">Einträge</router-link>
@@ -31,8 +31,8 @@
         <router-view></router-view>
     </main>
 </div>
-<footer class="donut-footer own-container">
-    <div class="footer-content">
+<footer class="donut-footer">
+    <div class="footer-content own-container">
         <nav class="qa-nav-footer">
             <div class="row">
                 <div class="col-md-6 col-lg-8" style="margin-bottom: 1em">
