changed navigation to nav element

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <h1 style="display: inline-block; margin-bottom: 0">
             <a href="https://wbt.wien/" title="Projektseite Wissensdrehscheibe" target="_blank"><img aria-hidden="true" src="app/img/prepart.svg"/></a><a href="." title="Wissensbasis Home"><img aria-hidden="true" src="app/img/wissensbasis.svg"/></a>
         </h1>
-        <div class="header-links">
+        <nav class="header-links">
             <router-link class="button first-link" to="/entries">Einträge</router-link>
             <router-link class="button" to="/tree">Tag-Baum</router-link>
             <router-link class="button" to="/tree/edit">Tags bearbeiten</router-link>
             <router-link class="button" to="/login">Login</router-link>
-        </div>
+        </nav>
     </header>
     <main class="own-container">
         <router-view></router-view>
