changed title to "Wissensbasis Barrierefreiheit", removed FHTW logo in header on very small screens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="app" class="main-container">
-    <vue-main page-name="Wissensbasis" logo-path="app/img/wissensbasis.svg" :link-list="linkList"></vue-main>
+    <vue-main page-name="Wissensbasis Barrierefreiheit" logo-path="app/img/wissensbasis_barrierefreiheit.svg" :link-list="linkList"></vue-main>
 </div>
 
 <script src="app/build/a11y-info-tree.bundle.js"></script>
